* Wed Jun 13 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include ctx->param->flags fix in mod_gridsite for
  OpenSSL 0.9.8 from Bruno Harbulot.
* Fri May 10 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.1 ====
* Fri Feb 16 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.0 ====
* Fri Feb 16 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.4.0 ====
* Thu Feb 15 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Final preparations for 1.4.x
* Fri Sep 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Transfer htproxyinfo utility functions into 
  grst_x509.c (GRSTx509ChainLoadCheck etc)
* Wed Aug  6 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.3.4 ====
* Mon Jul 17 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add Shibboleth handling from Joseph Dada's branch to
  mod_gridsite in main GridSite tree.
* Tue Jun 27 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Merge delegation services back into core.
- Add OCSP options
* Thu Jun 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Lots of additions to SiteCast/SlashGrid, including
  /grid/local/ filesystem with DNs from gridmapdir
- GridSiteCastAlias now allows any URL scheme (gsiftp,
  xrootd, ...) not just HTTP(S).
- Replace static gridsite.spec with make-gridsite-spec
* Fri Jun  9 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add patch from Jan Pospisil <honik@kma.zcu.cz> to
  Makefile, to allow standalone building of libraries.
- Include code for June 2006 version of delegation
  protocol (ie userproxy.pem rather than usercert.pem
  and userkey.pem)
* Thu Jun  8 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- SiteCast support in SlashGrid
* Mon Jun  5 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.3.1 ====
* Sun May 26 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include SlashGrid code, and in gridsite.spec etc
- Add sample fuse.spec to docs for use with SlashGrid
* Fri May 26 2006 Andrew McNab <Andrew.McNab@man.ac.uk>