@@ -1,9 +1,9 @@
 ##############################################################################
-## GridSite httpd-fileserver.conf - Andrew McNab <Andrew.McNab@man.ac.uk>
+## GridSite httpd-storage.conf - Andrew McNab <Andrew.McNab@man.ac.uk>
 ##
 ## For GridSite documentation, see http://www.gridsite.org/
 ##
-## Example configuration file for GridSite as an HTTP(S) fileserver,
+## Example configuration file for GridSite as an HTTP(S) storage server,
 ## listening on ports 80/777 (HTTP) and 443/488 (HTTPS) 
 ##
 ## (777/488 is to allow firewalls to distinguish between Grid and 
@@ -12,7 +12,7 @@
 ## This file should be renamed /etc/httpd/conf/httpd.conf and Apache
 ## restarted to use Apache2/GridSite as a simple HTTP(S) fileserver. 
 ##
-## We assume that you have mod_gridsite.so in /usr/lib/httpd/modules
+## We assume that you have mod_gridsite.so in /usr/lib/httpd/modules 
 ## and that you have (a) the host's hostcert.pem and hostkey.pem 
 ## in /etc/grid-security/ and (b) the Certification Authorities' you
 ## trust have their root certs in /etc/grid-security/certificates
@@ -73,6 +73,9 @@
 
 ServerRoot "/etc/httpd"
 
+#######!!!!!!!!!!!!!!!!!!!!
+ServerName pc63.hep.man.ac.uk
+
 PidFile logs/httpd.pid
 
 Timeout			300
@@ -106,6 +109,9 @@ ErrorLog	logs/httpd-gridsite-errors
 
 HostnameLookups On
 
+# Enable SiteCast location of files via multicast
+GridSiteCastGroup 224.0.1.111:777
+
 ######################################################################
 # Plain unauthenticated HTTP on ports 80 and 777
 ######################################################################
@@ -113,6 +119,9 @@ HostnameLookups On
 Listen 80
 Listen 777
 <VirtualHost *:80 *:777>
+
+GridSiteGridHTTP  on
+GridSiteCastAlias http://sitecast.domain:777/ /var/www/html
 
 <Directory "/var/www/html">
  GridSiteIndexes	on
@@ -140,6 +149,9 @@ SSLCACertificatePath    /etc/grid-security/certificates
 SSLVerifyClient         optional
 SSLVerifyDepth          10
 SSLOptions              +ExportCertData +StdEnvVars
+
+GridSiteGridHTTP  on
+GridSiteCastAlias https://sitecast.domain:777/ /var/www/html
 
 <Directory "/var/www/html">
  GridSiteIndexes	on
