@@ -13,11 +13,8 @@
 ## This file should be renamed /etc/httpd/conf/httpd.conf and Apache
 ## restarted to use Apache2/GridSite as a webserver. 
 ##
-## You do not need to install the GridSite mod_ssl.so module if you
-## do not wish to use Globus Proxies or VOMS attributes, but you must
-## have the mod_gridsite.so in /usr/lib/httpd/modules 
-##
-## We're assuming you have (a) the host's hostcert.pem and hostkey.pem 
+## We assume you have mod_gridsite.so in /usr/lib/httpd/modules 
+## and that you have (a) the host's hostcert.pem and hostkey.pem 
 ## in /etc/grid-security/ and (b) the Certification Authorities' you
 ## trust have their root certs in /etc/grid-security/certificates
 ##
@@ -25,10 +22,10 @@
 ## from https://datagrid.in2p3.fr/distribution/datagrid/security/ ) 
 ##
 ## If you want to use DN Lists in ACLs, they should be placed/downloaded
-## in /etc/grid-security/dn-lists/ or /var/www/htdocs/dn-lists/ 
+## in /etc/grid-security/dn-lists/ or /var/www/html/dn-lists/ 
 ## (Lists in /etc/grid-security/dn-lists/ override lists elsewhere.)
 ##
-## To start serving files, make a directory /var/www/htdocs owned by
+## To start serving files, make a directory /var/www/html owned by
 ## apache.apache, including the file .gacl containing:
 ##
 ## <gacl>
@@ -102,7 +99,7 @@ TypesConfig /etc/mime.types
 User  apache
 Group apache
 
-DocumentRoot "/var/www/htdocs"
+DocumentRoot "/var/www/html"
 
 <Directory />
     AllowOverride None
@@ -128,7 +125,7 @@ Listen 777
 ## and to allow you to edit files and ACLs via your browser.
 ScriptAlias /real-gridsite-admin.cgi /usr/sbin/real-gridsite-admin.cgi
 
-<Directory "/var/www/htdocs">
+<Directory "/var/www/html">
  ## This sets up GACL authorization for this server.
  GridSiteAuth		on
 
@@ -177,7 +174,7 @@ SSLOptions              +ExportCertData +StdEnvVars
 ## and to allow you to edit files and ACLs via your browser.
 ScriptAlias /real-gridsite-admin.cgi /usr/sbin/real-gridsite-admin.cgi
 
-<Directory "/var/www/htdocs">
+<Directory "/var/www/html">
  ## This sets up GACL authorization for this server.
  GridSiteAuth		on
 
@@ -197,7 +194,7 @@ ScriptAlias /real-gridsite-admin.cgi /usr/sbin/real-gridsite-admin.cgi
  ## GACL to search when it encounters a dn-list credential. The DN List
  ## files are plain text, one DN per line, and must have the full url
  ## as the file name, but URL Encoded - eg with urlencode(1)
- GridSiteDNlists /etc/grid-security/dn-lists/:/var/www/htdocs/dn-lists/
+ GridSiteDNlists /etc/grid-security/dn-lists/:/var/www/html/dn-lists/
 
  ## This is used to form the URL at which DN Lists "owned" by this 
  ## server are exported. https://FULL.SERVER.NAME/dn-lists/file
